# llm_assignment

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
.tasks.local/: fix-linting-errors.md
configs/: base.yaml  dropped.yaml  dropped_lora.yaml  original.yaml  original_lora.yaml  pruned.yaml  pruned_lora.yaml
docs/: DATASET_CARD.md  MODEL_CARD.md  architecture.md  assignment.md  configuration.md  data_collection.md  evaluation.md  preprocessing.md  training.md
logs/dropped/: events.out.tfevents.1767554674.dgx26.160813.0
logs/dropped_lora/: events.out.tfevents.1767557908.dgx26.240778.0
logs/original/: events.out.tfevents.1767554673.dgx26.160723.0
logs/original_lora/: events.out.tfevents.1767557880.dgx26.239663.0
logs/pruned/: events.out.tfevents.1767554676.dgx26.160972.0
logs/pruned_lora/: events.out.tfevents.1767555174.dgx26.179969.0
logs/reduced/: events.out.tfevents.1767464132.dgx26.2437834.1
results/: evaluation_results_Qwen3-8B.json  evaluation_results_dropped.json  evaluation_results_dropped_lora.json  evaluation_results_original.json  evaluation_results_original_lora.json  evaluation_results_pruned.json  evaluation_results_pruned_lora.json
scripts/: evaluate.py  preprocess.py  scrape.py  scrape.sh  tmux.sh  train.py
scripts/utils/: analyze_data.py  analyze_params.py  download_from_hub.py  token_counter.py  upload_to_hub.py
src/llm_assignment/: __init__.py
src/llm_assignment/data_engine/: __init__.py  extraction.py  formatting.py  llm_filter.py  pdf_downloader.py  pdf_processor.py  pipeline.py  scraper.py
src/llm_assignment/evaluation/: __init__.py  generate.py  perplexity.py  semantic_entropy.py
src/llm_assignment/models/: __init__.py  base.py  dropped_model.py  factory.py  model.py  pruned_model.py
src/llm_assignment/training/: __init__.py  trainer.py
src/llm_assignment/utils/: __init__.py  logging_config.py
tests/: conftest.py
tests/integration/: test_model_factory_integration.py
tests/unit/: test_evaluation.py  test_extraction.py  test_formatting.py  test_logging_config.py  test_model_factory.py  test_model_loading.py  test_model_module.py  test_trainer_config.py
