[project]
name = "llm_assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "crawl4ai>=0.7.8",
    "datasets>=4.3.0",
    "kernels>=0.11.5",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "playwright>=1.57.0",
    "pypdf>=6.5.0",
    "sentence-transformers>=5.2.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.24.0",
    "unsloth>=2025.12.9",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "taskipy>=1.14.0",
    "pytest>=8.3.0",
    "coverage>=7.11.0",
    "pre-commit>=4.3.0",
    "pytest-cov>=7.0.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_assignment", "scripts"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["docker", "third_party", "third_party/*"]
exclude = [".venv", ".tox", "build", "dist", "docker"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "B",
    "C4",
    "DTZ",
    "E4",
    "E7",
    "E9",
    "F",
    "FBT",
    "FURB",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PD",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLR1",
    "PLR5",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "UP",
    "W",
]
ignore = [
    "F722",   # Conflicts with array typing.
    "T201",   # We use print statements.
    "PD008",  # Lots of false positives.
    "ISC001", # Disabling to support ruff format.
    "FBT",    # Disabling to support ruff format.
    "LOG",
    "E402",
    "N812",   # Allow import torch.nn.functional as F
    "DTZ007",
    "PLC0415",
    "RET504",
]
unfixable = [
    "B905", # Fix defaults to strict=False, which is not what we want.
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
single-line-exclusions = ["collections.abc", "typing", "typing_extensions"]
known-third-party = ["wandb"]

[tool.pytest.ini_options]
markers = [
    "manual: should be run manually.",
    "integration: mark a test as an integration test.",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/llm_assignment"]

[tool.coverage.report]
skip_empty = true
ignore_errors = true
omit = ["*__init__.py", "**/configs/**", "*/_remote_module_non_scriptable.py", "*_cache", "**/unsloth_compiled_cache/**", "scripts/**"]

[tool.taskipy.tasks]
# Code style
fmt = "ruff format scripts src tests"
lint = "ruff check --fix scripts src tests"

# Testing & coverage
pytest = "coverage run -m pytest -v"
coverage_report = "coverage report -m"
coverage_html = "coverage html -d ./build/coverage_python"
coverage_xml = "coverage xml"

test = "task pytest && task coverage_report && task coverage_html && task coverage_xml"

# Simple workspace clean
clean = "rm -rf build dist htmlcov .pytest_cache .ruff_cache .coverage"

# Convenience
all = "task fmt && task lint && task test && task clean"
